--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     });
     });
 </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BEG6XN73PK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BEG6XN73PK');
+</script>
 </head>
 
 <body>
