--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Dota2, Dota 2, dota 2 reddit, Steam, Gra, Pudge, Defense of the Ancient 2, Gabe Newell, GOSU, gosugamers, GOSU AI, dota 2 quiz">
+    <meta name="keywords" content="Dota2, Dota 2, dota 2 reddit, Steam, Gra, Pudge, Defense of the Ancient 2, Gabe Newell, GOSU, gosugamers, GOSU AI, dota 2 quiz, neverdieboy, neverdieboygithubio">
     <meta name="description" content="">
     <title>Dota 2</title>
     <link rel="stylesheet" href="styles.css">
