--- a/index.html
+++ b/index.html
@@ -2,191 +2,129 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Dota2, Dota 2, dota 2 reddit, Steam, Gra, Pudge, Defense of the Ancient 2, Gabe Newell, GOSU, gosugamers, GOSU AI, dota 2 quiz, neverdieboy, neverdieboygithubio">
-    <meta name="description" content="">
-    <title>Dota 2</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
-    <link rel="icon" href="Images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="font-awesome-4.7.0\css\font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $("a").on('click', function(event) {
-                if (this.hash !== "") {
-                    event.preventDefault();
-                    var hash = this.hash;
-                    $('html, body').animate({
-                        scrollTop: $(hash).offset().top
-                    }, 800, function() {
-                        window.location.hash = hash;
-                    });
-                }
-            });
-        });
-    </script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BEG6XN73PK"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'G-BEG6XN73PK');
-    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src='main.js'></script>
 </head>
 
 <body>
     <section class="header">
-        <nav>
-            <hr>
-            <a href="index.html"><img src="Images/DotaLogo.png"></a>
-            <div class="nav-links" id="navLinks">
-                <i class="fa fa-window-close-o" onclick="hideMenu()"></i>
-                <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="#test">TEST</a></li>
-                    <li><a href="#about">ABOUT</a></li>
-                    <li><a href="#tournaments">TOURNAMENTS</a></li>
-                    <li><a href="#feedback">FEEDBACK</a></li>
-                </ul>
+        <div class="wrapper">
+            <a href="index.html"><img src="Art/Logo.png" alt="logo"></a>
+            <div class="buttonWrapper">
+                <a href="szkol.html" target="_top">SZKOLENIA BHP</a>
+                <a href="online.html" target="_top">SZKOLENIE BHP ONLINE</a>
+                <a href="kontakt.html" target="_top">KONTAKT</a>
             </div>
-            <i class="fa fa-bars" onclick="showMenu()"></i>
-        </nav>
+        </div>
+    </section>
+    <section class="divide1">
+        <div class="centered">Firma QuantumBHP w Częstochowie</div>
+    </section>
 
-        <div class="text-box">
-            <h1>DEFENCE OF THE ANCIENT</h1>
-            <a href="https://store.steampowered.com/app/570/Dota_2/" class="hero-btn">Zostan czescia wspanialej spolecznosci DOTA</a>
+
+
+
+
+    <section class="paragraf1">
+        <div class="wrapper">
+            <div class="column1">
+
+                <p class="par1">
+                    Jesteśmy firmą rodzinną, działającą w Częstochowie od 2019 roku. Świadczymy usługi BHP. Profesjonalizm, rzetelność, indywidualne podejście do klienta to cechy, które wyróżniają nas na tle innych firm działających w Częstochowie.
+                </p>
+                <p class="par2">
+                    Specjalizujemy się w szerokim zakresie usług związanych z dziedziną bezpieczeństwa i higieny pracy – przeprowadzamy szkolenia BHP, ochrony przeciwpożarowej (ppoż.) oraz szkolenia z zasad udzielania pierwszej pomocy.
+                </p>
+                <p class="par3">
+                    Możemy poszczycić się, że zaufało nam wiele znanych firm w Polsce. Każdego klienta traktujemy indywidualnie – dokonujemy odpowiedniej wyceny oraz doradzamy, które rozwiązanie jest dla niego najlepsze. Naszym klientom proponujemy preferencyjne stawki.
+                    W przypadku jakichkolwiek pytań o szkolenia z zakresu BHP zapraszamy do kontaktu z naszym biurem w Częstochowie.
+                </p>
+            </div>
+            <div class="column2">
+                <p class="par4">
+                    W swojej ofercie posiadamy kompleksową obsługę BHP małych i dużych przedsiębiorstw:
+                    <ul>
+                        <li>przeprowadzamy wstępne i okresowe szkolenia BHP (również online)</li>
+                        <li>organizujemy szkolenia przeciwpożarowe</li>
+                        <li>prowadzimy kursy pierwszej pomocy</li>
+                        <li>pomagamy przygotować instrukcje BHP</li>
+                        <li>sporządzamy kompletną dokumentację powypadkową</li>
+                        <li>dokonujemy oceny ryzyka zawodowego dla każdego stanowiska pracy (nadzór BHP)</li>
+                    </ul>
+                </p>
+                <p class="par5">
+                    Świadczymy usługi w zakresie BHP. Nasze szkolenia prowadzone są przez osoby z doświadczeniem, które w jasny sposób przekazują praktyczną wiedzę. Staramy się, aby nasze kursy przełamywały stereotyp nudnych szkoleń BHP – wiedza podana w zrozumiały i ciekawy
+                    sposób jest skuteczniej przyswajana. Szkolenia BHP przeprowadzamy zgodnie z aktualnie obowiązującymi przepisami organizacji pracy na konkretnych stanowiskach, w tym pracowników administracyjno-biurowych. Wychodząc naprzeciw firmom
+                    o różnych profilach, zajmujemy się organizacją szkoleń BHP w języku polskim oraz angielskim.
+                </p>
+            </div>
         </div>
 
     </section>
 
-    <!---test-->
-    <section class="test" id="test">
-        <div class="testText">
-            <h1>Zdaj test ze swojej wiedzy</h1>
-            <p>Krotki test sprawdzajacy Twoja wiedze w dota2</p>
-        </div>
-        <div class="score">
-            <h1 id="right-answers">Wlasciwe odpowiedzi: 0/3 </h1>
-        </div>
-        <div class="container">
-            <div id="question-container" class="hide">
-                <div id="question" class="que">a</div>
-                <div id="answer-buttons" class="btn-grid">
-                    <button class="btn">Answer 1</button>
-                    <button class="btn">Answer 2</button>
-                    <button class="btn">Answer 3</button>
-                    <button class="btn">Answer 4</button>
+    <section class="divide2">
+        <div class="centered2">Nasza siedziba znajduje się w Częstochowie</div>
+    </section>
+    <section class="paragraf2">
+        <h1>Szkolenia BHP w Częstochowie</h1>
+        <p>Wypadek w pracy może się zdarzyć każdemu. Nawet niegroźne sytuacje wymagają odpowiedniej reakcji i przygotowania pracownika na taką okoliczność. Aby uniknąć problemów i nieprzyjemności prawnych, istotnym elementem jest merytoryczne przygotowanie
+            pracownika pod kątem obowiązujących przepisów BHP oraz dopasowanie treści szkolenia do rodzaju wykonywanej pracy, a także potencjalnych szkód, na które może być narażony. Szkolenia z zakresu BHP PPOŻ., które organizujemy w Częstochowie, cieszą
+            się zainteresowaniem zarówno przedstawicieli firm prywatnych, jak i placówek publicznych. Wysoki poziom wiedzy oraz profesjonalna kadra, są niewątpliwym wyróżnikiem naszej firmy. W Częstochowie realizujemy szkolenia BHP i PPOŻ. dla nowej kadry
+            i dla przedstawicieli zawodów zaufania publicznego oraz przeprowadzamy szkolenia okresowe dla pracowników. Jesteśmy przekonani, że nasze indywidualne podejście spełni oczekiwania nawet najbardziej wymagających klientów, a przeprowadzone kompleksowo
+            szkolenie BHP, w potencjalnej sytuacji zagrożenia życia lub zdrowia, umożliwi podjęcie właściwych działań.
+        </p>
+        <h1>Usługi BHP w języku polskim i angielskim</h1>
+        <p>
+            Niestety wciąż można znaleźć firmy, które uchylają się od obowiązków wynikających z odpowiednich przepisów prawa. Zaliczenie szkolenia BHP jest nie tylko niezbędną formalnością, ale przede wszystkim istotną wiedzą, która wpływa na komfort i bezpieczeństwo
+            wszystkich osób przebywających na terenie firmy. Wychodząc naprzeciw oczekiwaniom, proponujemy naszym klientom szkolenia BHP dla firm w Częstochowie zarówno w języku polskim, jak i języku angielskim. Umożliwia to dopasowanie formuły szkoleń
+            oraz przekazywanych treści do odbiorców bez konieczności angażowania tłumacza. Podczas przeprowadzania szkoleń wstępnych i okresowych, współpracujemy z przedstawicielami stanowisk kierowniczych, robotniczych, administracyjno-biurowych, pracowników
+            służby BHP, a także przedstawicieli zawodów inżynieryjno-technicznych.
+        </p>
+        <h1>Sporządzanie dokumentacji powypadkowej - Częstochowa</h1>
+        <p>
+            Nawet merytoryczne przygotowanie i właściwie przeprowadzone szkolenie BHP dla firm może nie uchronić pracownika przed wypadkiem w pracy. W ramach oferowanych usług sporządzamy również dokumentację powypadkową, zajmując się ustaleniem okoliczności i przyczyn
+            zaistniałego wypadku. Proces ten wymaga przeanalizowania wszystkich, niezbędnych faktów i sporządzenia dokumentacji według ścisłych założeń postępowania powypadkowego, poświadczając o zdarzeniu krok po kroku.
+        </p>
+    </section>
+
+    <section class="formular">
+        <h1>Formularz kontaktowy</h1>
+        <input type="text" placeholder="Imię i Nazwisko*" class="initialBox">
+        <input type="text" placeholder="Adres email*" class="emailBox">
+        <!-- <input type="text" placeholder="Treść wiadomości" class="textBox"> -->
+        <textarea id="freeform" name="freeform" rows="4" cols="50" placeholder="Treść wiadomości" class="textBox"></textarea>
+        <button type="button" onclick="alert('Wiadomośc wysłana')" class="sendButton">WYŚLIJ</button>
+    </section>
+
+    <section class="Footer">
+        <div class="wrapperFoot">
+            <img src="Art/Logo.png" alt="logo">
+            <div class="infoWrapper">
+                <div class="firstColumn">
+                    <p>Vladyslav Tretyak</p>
+                    <p><i class="fa fa-phone"></i> 555 666 777</p>
+                    <p>Barys Khrapavitski</p>
+                    <p><i class="fa fa-phone"></i> 123 456 789</p>
+                </div>
+                <div class="secondColumn">
+                    <p>Siedziba firmy QuantumBHP w Częstochowie</p>
+                    <p>Generała Jana Henryka Dąbrowskiego 69</p>
+                    <p>42-201 Częstochowa</p>
                 </div>
             </div>
-            <div class="controls">
-                <button id="start-btn" class="start-btn btn">Start</button>
-                <button id="next-btn" class="next-btn btn hide">Next</button>
-            </div>
-        </div>
-
-
-        <script src="scriptTest.js"></script>
-    </section>
-
-    <!--About-->
-    <section class="about" id="about">
-        <div class="aboutHeader">
-            <h1>Troche o Dota!</h1>
-        </div>
-
-        <div class="row">
-            <div class="about-col">
-                <h3>Opis</h3>
-                <p>
-                    Dota 2 to wieloosobowa gra komputerowa na arenie bitewnej online opracowana przez Valve Corporation. Gra jest kontynuacja DotA, niestandardowej modyfikacji mapy do Warcraft III: Reign of Chaos i jej dodatku do Warcraft III: The Frozen Throne. Gra przedstawia
-                    bitwe na specjalnej mapie; w kazdym meczu biora udzial dwie piecioosobowe druzyny, które kontroluja „bohaterow” – postaci o roznych zestawach umiejetnosci. Aby wygrac mecz, druzyna musi zniszczyc specjalny obiekt „fortecy” nalezacy
-                    do strony wroga i chronic swoja „fortece” przed zniszczeniem.
-                </p>
-            </div>
-            <div class="about-col">
-                <h3>proces gry</h3>
-                <p>
-                    Kazdy mecz odbywa sie na specjalnej, kwadratowej mapie, na ktorej twierdze obu druzyn znajduja sie w przeciwleglych rogach, a gracze sa rozproszeni po sciezkach laczacych te fortece – „liniach” (ang. Lane). Oprocz samych graczy w grze akceptowane sa stwory
-                    sterowane komputerowo - "creeps" (eng. Creeps) oraz konstrukcje stale - "wieze" (eng. Towers), wlasne z kazdej strony; biora równiez udzial w bitwie, atakujac wrogich bohaterow, creepow i wrogie wieze, pomagajac w ten sposob „swojej”
-                    druzynie. Mgla wojny, ktora pokrywa wiekszosc mapy, uniemozliwia graczom sledzenie ruchow wroga.
-                </p>
-            </div>
-            <div class="about-col">
-                <h3>Nagrody</h3>
-                <p>
-                    PC Gamer zrecenzowal Dota 2 we wrzesniu 2012 roku, zauwazajac, ze byla to „niezwykle gleboka i zlozona gra, ktora jest swietna kontynuacja oryginalnej DotA” i dala grze 85/100. W grudniu 2012 roku PC Gamer nominowal Dote 2 jako pretendenta do najlepszej
-                    gry 2012 roku, a takze najlepszej gry e-sportowej roku. Po pierwszej publicznej demonstracji gry na The International 2011 otrzymala nagrode People's Choice Award od IGN
-                </p>
-            </div>
         </div>
     </section>
-
-
-    <!--TOURNAMENTS-->
-
-    <section class="tournaments" id="tournaments">
-        <div class="tourFrame">
-            <h3>harmonogram turniejow</h3>
-        </div>
-        <iframe src="https://www.gosugamers.net/dota2/tournaments" style="border: 5px solid darkred;" width="1400" height="900"></iframe>
-    </section>
-
-
-    <!--FEEDBACK-->
-
-    <section class="feedback" id="feedback">
-        <div class="feedbackHeader">
-            <h3>co ludzie mowia o dota</h3>
-        </div>
-
-        <div class="back-col">
-            <img src="Images/Review1.png">
-            <!--<div>
-                <h3>Recenzja od uzytkownika o pseudonimie: "VadokGurz"</h3>
-            </div>-->
-        </div>
-        <div class="back-col">
-            <img src="Images/Review2.png">
-            <div>
-                <h3>Recenzja od uzytkownika o pseudonimie: "Jinx"</h3>
-            </div>
-        </div>
-        <div class="back-col">
-            <img src="Images/Review3.png">
-            <div>
-                <h3>Recenzja od uzytkownika o pseudonimie: "Tegi Jez"</h3>
-            </div>
-        </div>
-    </section>
-
-    <!--FOOTER-->
-
-    <section class="footer">
-        <h3>strona internetowa wykonana przez Danylo Koval</h3>
-        <p>Nr. 132522</p>
-    </section>
-
-    <!-----JS close menu/open menu------>
-    <script>
-        var navLinks = document.getElementById("navLinks");
-
-        function showMenu() {
-            navLinks.style.right = "0";
-        }
-
-        function hideMenu() {
-            navLinks.style.right = "-200px";
-        }
-    </script>
-
 </body>
 
 </html>
